--- a/style.css
+++ b/style.css
@@ -57,3 +57,7 @@ body {
     background-color: #2c2c2c;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
 }
+.calculator > button:active {
+    background-color: #262626;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+}
