--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
+:root {
+        --background-color: #1a1a1a;
+        --calculator-body: #262626;
+        --output-color: #fff;
+        --calculator-hover: #2c2c2c;
+        --icon-color: #fff;
+        --footer-color: #fff;
+        --calculator-button-color: #fff;
+    }
+
+.lightmode {
+    --background-color: #ffffff;
+    --calculator-body: #dedede;
+    --output-color: #343434;
+    --calculator-hover: #dbdbdb;
+    --icon-color: #000000;
+    --footer-color: #343434;
+    --calculator-button-color: #343434;
+}
+
 *, *::after, *::before {
     box-sizing: border-box;
     padding: 0;
@@ -13,20 +33,22 @@ body {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
     -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
     outline: none !important;
+    background-color: var(--background-color);
 }
 .calculator {
     display: grid;
     grid-template-columns: repeat(4, 80px);
     grid-template-rows: repeat(6, 80px);
-    background-color: #262626;
+    background-color: var(--calculator-body);
     width: fit-content;
     gap: 8px;
     padding: 20px 15px;
     border-radius: 20px;
     margin-top: 50px;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
 }
 .output {
-    color: white;
+    color: var(--output-color);
     grid-column: 1 / 5;
     display: flex;
     flex-direction: column;
@@ -50,25 +72,32 @@ body {
     font-size: 1.2rem;
     border-radius: 100px;
     border: none;
-    background-color: #262626;
+    background-color: var(--calculator-body);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
-    color: white;
+    color: var(--calculator-button-color);
     cursor: pointer;
     transition: all 0.2s ease-in-out;
 }
 .calculator > button:hover {
-    background-color: #2c2c2c;
+    background-color: var(--calculator-hover);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
 }
 .calculator > button:active {
-    background-color: #262626;
+    background-color: var(--calculator-body);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
 }
 
 a {
-    color: #262626;
+    color: var(--footer-color);
 }
 footer {
+    color: var(--footer-color);
     text-align: center;
     margin-top: 50px;
+}
+.darkmodeicon {
+    color: var(--icon-color);
+    margin-top: 20px;
+    text-align: right;
+    cursor: pointer;
 }
