--- a/style.css
+++ b/style.css
@@ -101,3 +101,13 @@ footer {
     text-align: right;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        margin: 0 50px;
+    }
+    .calculator {
+        grid-template-columns: repeat(4, 70px);
+        grid-template-rows: repeat(6, 70px);
+    }
+}
